# bpx_robot

./: .gitattributes  .gitignore  README.md  debug_viewer.py  head_controller.py  requirements.txt
acoustic/: README.md  __init__.py  acoustic_slam.py  clap_detector.py  doa_tracker.py  emotion_detector.py  event_detector.py  paging.py  passive_tracker.py  proximity_estimator.py  speaker_memory.py  xvf3800_node.py
acoustic/room_acoustics/: __init__.py  bark_signal.py  calibrator.py  rir_extractor.py  room_classifier.py  room_db.py
behaviors/: behavior_manager.py  gait_map.py
behaviors/primitives/: __init__.py  come.py  fetch.py  heel.py
bpx_driver/: CMakeLists.txt  package.xml
bpx_driver/include/bpx_driver/: bpx_node.hpp
bpx_driver/src/: bpx_node.cpp
config/: robot.yaml
hardware/: head_design.md
launch/: bpx_full.launch.py
perception/camera/: camera_node.py  stereo_cal.yaml  stereo_calibrate.py
perception/face_recognition/: face_db.py  recognizer.py
perception/object_detection/: detector.py
perception/vslam/: rtabmap.yaml
speech/: command_parser.py  stt_node.py
